# market-data-feed-rs

./: .gitignore  Cargo.toml  README.md  default.nix
app/: Cargo.toml  rustfmt.toml
app/assets/: mdf-kospi200.20110216-0.pcap:Zone.Identifier
app/src/: config.rs  debug.rs  main.rs  processor.rs  protocol.rs  quote.rs  strategy.rs
nix/: app.nix  automation.nix  nixpkgs.nix  packages.nix  shell.nix
nix/overlays/: default.nix  secretscout.nix
