[workspace]
members = ["app"]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true        # Automatically removes symbols (saves space, slightly faster load)
incremental = false # Disable incremental for a cleaner, more optimized final pass